sftpgo/Deployment-sftpgo.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: sftpgo
  name: sftpgo
  namespace: media
spec:
  minReadySeconds: 10
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      name: sftpgo
  template:
    metadata:
      annotations:
        reloader.stakater.com/auto: "true"
      labels:
        name: sftpgo
    spec:
      containers:
      - env:
        - name: SFTPGO_HTTPD__BINDINGS__0__OIDC__CLIENT_ID
          valueFrom:
            secretKeyRef:
              key: SFTPGO_HTTPD__BINDINGS__0__OIDC__CLIENT_ID
              name: sftpgo-sealed-secret
        - name: SFTPGO_HTTPD__BINDINGS__0__OIDC__CLIENT_SECRET
          valueFrom:
            secretKeyRef:
              key: SFTPGO_HTTPD__BINDINGS__0__OIDC__CLIENT_SECRET
              name: sftpgo-sealed-secret
        - name: SFTPGO_DATA_PROVIDER__PASSWORD
          valueFrom:
            secretKeyRef:
              key: SFTPGO_DATA_PROVIDER__PASSWORD
              name: sftpgo-shared-sealed-secret
        image: docker.io/drakkan/sftpgo:v2.7.6-alpine
        imagePullPolicy: IfNotPresent
        livenessProbe:
          failureThreshold: 3
          httpGet:
            path: /healthz
            port: 8080
            scheme: HTTP
          initialDelaySeconds: 15
          periodSeconds: 30
          timeoutSeconds: 5
        name: sftpgo
        ports:
        - containerPort: 8080
          name: server
        - containerPort: 9219
          name: metrics
        readinessProbe:
          failureThreshold: 3
          httpGet:
            path: /healthz
            port: 8080
            scheme: HTTP
          initialDelaySeconds: 5
          periodSeconds: 10
          timeoutSeconds: 5
        volumeMounts:
        - mountPath: /srv/sftpgo
          name: data
        - mountPath: /etc/sftpgo/sftpgo.json
          name: sftpgo-json
          subPath: sftpgo.json
      securityContext:
        fsGroup: 0
        runAsGroup: 0
        runAsUser: 0
      volumes:
      - configMap:
          name: sftpgo-json
        name: sftpgo-json
      - hostPath:
          path: /cold-data/sftpgo/data
        name: data
