sftpgo/Service-sftpgo.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    prometheus.io/path: /metrics
    prometheus.io/port: "9219"
    prometheus.io/scrape: "true"
  labels:
    app: sftpgo
    name: sftpgo
  name: sftpgo
  namespace: media
spec:
  ports:
  - name: sftpgo-server
    port: 8080
    targetPort: 8080
  - name: sftpgo-metrics
    port: 9219
    targetPort: 9219
  selector:
    name: sftpgo
