sftpgo/IngressRoute-sftpgo-ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  labels:
    app: sftpgo
  name: sftpgo-ingressroute
  namespace: media
spec:
  entryPoints:
  - websecure
  routes:
  - kind: Rule
    match: Host(`cloud.danielramos.me`)
    services:
    - name: sftpgo
      port: 8080
  tls:
    store:
      name: default
